[tool.poetry]
name = "wth-2024"
version = "0.1.0"
description = ""
authors = ["chandanchawda-tomtom <84369319+chandanchawda-tomtom@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "automating_logistics_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
